--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,11 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="banner" style="background-image: url(./images/cinema.jpg);">
+  <div class="container">
+    <div class="d-flex justify-content-between"> 
+        <div></div>
+        <div class="f-flex flex-columns"> 
+            <h1 class="big-title">Cinema <br> Ironhack</h1>
+            <a class="button-check" href="/movies">Check the movies</a>
+        </div>
+    </div> 
+  </div>
+</div>
